# dogfightapi/api/controllers/dog.js
@@ -5,7 +5,13 @@ module.exports = {
     addDog: addDog,
     getDog: getDog,
     removeDog: removeDog,
-    getDogs: getDogs
+    getDogs: getDogs,
+    getFightMoves: getFightMoves,
+    addFightMove: addFightMove,
+    getDistractions: getDistractions,
+    addDistraction: addDistraction,
+    getActions: getActions,
+    addAction: addAction
 };
 
 function addDog(req, res) {
@@ -40,5 +46,47 @@ function removeDog(req, res) {
 function getDogs(req, res) {
     redis.getAllDogs(function(redis_error, dogs) {
         res.json(dogs);
+    });
+}
+
+function getFightMoves(req, res) {
+    var name = req.swagger.params.name.value;
+    redis.getFightMoves(name, function(redis_error, fightMoves) {
+        res.json(fightMoves);
+    });
+}
+
+function addFightMove(req, res) {
+    var name = req.swagger.params.name.value;
+    redis.addFightMove(name, req.body, function() {
+        res.json({success: 1, description: "Fight move added."});
+    });
+}
+
+function getDistractions(req, res) {
+    var name = req.swagger.params.name.value;
+    redis.getDistractions(name, function(redis_error, distractions) {
+        res.json(distractions);
+    });
+}
+
+function addDistraction(req, res) {
+    var name = req.swagger.params.name.value;
+    redis.addDistraction(name, req.body, function() {
+        res.json({success: 1, description: "Distraction added."});
+    });
+}
+
+function getActions(req, res) {
+    var name = req.swagger.params.name.value;
+    redis.getActions(name, function(redis_error, actions) {
+        res.json(actions);
+    });
+}
+
+function addAction(req, res) {
+    var name = req.swagger.params.name.value;
+    redis.addAction(name, req.body, function() {
+        res.json({success: 1, description: "Action added."});
     });
 }
